Added clean history code